Fix spacing issues in various places

--- a/web/themes/custom/opdavies/assets/css/components/markup.pcss
+++ b/web/themes/custom/opdavies/assets/css/components/markup.pcss
@@ -90,11 +90,11 @@
   }
 
   * + h2 {
-    @apply mt-8
+    @apply mt-6
   }
 
   h2 + * {
-    @apply mt-4
+    @apply mt-3
   }
 
   h3 {
